--- a/citizenship.html
+++ b/citizenship.html
@@ -664,7 +664,7 @@ p {
 }
 
 .citizenship-programs h1 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-bottom: 10px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
@@ -709,9 +709,10 @@ p {
     transform: translateY(-3px);
 }
 .citizenship-programs .program h3 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-bottom: 15px;
     text-align: center;
+    font-weight: normal;
 }
 
 .citizenship-programs .program p {
@@ -843,7 +844,7 @@ p {
   /* Simplify left block styling on mobile */
   .canada-pr-left { display: block; }
   .vertical-line { display: none; }
-  .main-heading { font-size: 1.35rem; line-height: 1.3; }
+  .main-heading { font-size: 1.2rem; line-height: 1.3; }
   .btn-apply { font-size: 0.75rem; }
   /* Show inline hero image only on mobile for FIRST canada-pr section */
   .mobile-inline-hero { display:block; width:100%; border-radius:10px; margin:12px 0 14px; }
