--- a/legalService.html
+++ b/legalService.html
@@ -350,7 +350,7 @@ body { font-family: "Times New Roman", serif; }
   .legal-pr-left { width:100%; display:block; }
   .legal-pr-right { display:none !important; }
   .vertical-line { display:none; }
-  .legal-pr .main-heading { font-size:1.35rem; line-height:1.3; }
+  .legal-pr .main-heading { font-size:1.3rem; line-height:1.3; }
   .btn-apply { font-size:0.75rem; }
   .mobile-inline-hero { display:block; }
 
@@ -476,7 +476,7 @@ body {
 .advisory-section .sub-heading {
   color: #d6252a;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
   letter-spacing: 1px;
   margin-bottom: 10px;
 }
@@ -699,6 +699,7 @@ body {
 
 /* Mobile adjustments: advisory-section service cards 2 per row with reduced typography */
 @media (max-width:768px){
+  .advisory-section .main-heading { font-size: 1.3rem; }
   .advisory-section .services { display:grid; grid-template-columns:repeat(2,1fr); gap:18px; }
   .advisory-section .service-card { padding:14px; }
   .advisory-section .service-card h3 { font-size:14px; margin-bottom:8px; font-weight: bold; }
