Update website content and styling - Added new images (PNP, study visa, visit visa), updated HTML pages content, refined contact.css styling, and improved overall website functionality

--- a/otherService.html
+++ b/otherService.html
@@ -299,7 +299,7 @@ body { font-family: "Times New Roman", serif; }
   text-decoration: none;
   color: #333;
   position: relative;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: sans-serif;
 }
 .main-nav a.active { color:#e00000; font-weight:600; }
 .main-nav a.active::after { content:none !important; }
