--- a/realEstate.html
+++ b/realEstate.html
@@ -224,7 +224,7 @@ body { font-family: "Times New Roman", serif; }
   text-decoration: none;
   color: #333;
   position: relative;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: sans-serif;
 }
 .main-nav a.active::after {
   content:none !important;
