--- a/residencyInvestment.html
+++ b/residencyInvestment.html
@@ -299,6 +299,7 @@ body.has-fixed-headers { padding-top: var(--fixed-headers-height, 140px); }
   text-decoration: none;
   color: #333;
   position: relative;
+  font-family: sans-serif;
 }
 .main-nav a.active::after {
   content: none !important; /* remove underline */
